@@ -1,3 +1,13 @@
+(06/12/14)
+==========
+
+· Update Emulators > UAE4ALL ver 2.5.3.2
+
+(25/11/14)
+==========
+
+· Update Emulators > Final Burn Alpha 2x for Raspberry Pi (4 players)
+
 (24/11/14)
 ==========
 
